// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`label-value label-value renders with ian false 1`] = `
<div
  className="label-value-container"
>
  <div
    className="label-value__label"
  >
    label: 
  </div>
  <div
    className="label-value__value"
    style={
      Object {
        "color": "blue",
      }
    }
    title="tooltip"
  >
    value
  </div>
</div>
`;

exports[`label-value label-value renders with ian true 1`] = `
<div
  className="ian-label-value-container"
>
  <div
    className="ian-label-value__label"
  >
    label: 
  </div>
  <div
    className="ian-label-value__value"
    style={
      Object {
        "color": "blue",
      }
    }
    title="tooltip"
  >
    value
  </div>
</div>
`;
